# lastfm_download

./: .gitignore  README.md  lastfm_download.py  pyproject.toml  scrapy.cfg
lastfm_download/: items.py  settings.py
lastfm_download/spiders/: lastfm.py
