[tool.poetry]
name = "lastfm_download"
version = "0.0.1"
description = ""
authors = ["Bruno Bonagura <bbonagura9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "2.5.0"

[tool.poetry.dev-dependencies]
flake8 = "3.9.1"
isort = "5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
